Revert "Fix Reader Mode not showing pictures (task 0023)"
This reverts commit 80ce9888c4bee658d0e1f9dc91994d59ee0ef6ce.

--- a/src/style.css
+++ b/src/style.css
@@ -177,7 +177,11 @@ hr {
     margin: 2rem 0;
 }
 
-.img-zoom-container {
+.img-zoom-toggle {
+    display: none;
+}
+
+.img-zoom-link {
     display: block;
     cursor: zoom-in;
 }
@@ -193,7 +197,7 @@ hr {
     justify-content: center;
 }
 
-.img-zoom-overlay.active {
+.img-zoom-toggle:checked ~ .img-zoom-overlay {
     display: flex;
 }
 
